// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts reducer getPostsByCategory returns posts from category 1`] = `
Array [
  Object {
    "categories": Array [
      101,
      102,
    ],
    "name": "Some post",
  },
]
`;

exports[`Posts reducer getPostsByCategory returns posts from category 2`] = `
Array [
  Object {
    "categories": Array [
      101,
      102,
    ],
    "name": "Some post",
  },
  Object {
    "categories": Array [
      102,
      103,
    ],
    "name": "Another post",
  },
]
`;

exports[`Posts reducer getPostsByCategory returns posts from category 3`] = `Array []`;

exports[`Posts reducer handles RECEIVE_POSTS action and adds new posts to the state 1`] = `
Object {
  "isFetching": 0,
  "items": Array [
    Object {
      "id": 1,
      "name": "Nice post",
    },
    Object {
      "id": 2,
      "name": "Nicer post",
    },
    Object {
      "id": 3,
      "name": "Nicest post",
    },
  ],
  "loadMore": false,
}
`;

exports[`Posts reducer handles RECEIVE_POSTS action and continues load more 1`] = `
Object {
  "isFetching": 0,
  "items": Array [
    Object {
      "id": 1,
    },
    Object {
      "id": 2,
    },
    Object {
      "id": 3,
    },
    Object {
      "id": 4,
    },
    Object {
      "id": 5,
    },
    Object {
      "id": 6,
    },
    Object {
      "id": 7,
    },
    Object {
      "id": 8,
    },
    Object {
      "id": 9,
    },
    Object {
      "id": 10,
    },
  ],
  "loadMore": true,
}
`;

exports[`Posts reducer handles RECEIVE_POSTS action and merges by post id 1`] = `
Object {
  "isFetching": 0,
  "items": Array [
    Object {
      "id": 1,
      "name": "Nice post",
    },
    Object {
      "id": 2,
      "name": "Nicer post",
    },
  ],
  "loadMore": false,
}
`;

exports[`Posts reducer handles REQUEST_POSTS action 1`] = `
Object {
  "isFetching": 1,
  "items": Array [
    Object {
      "id": 1,
      "name": "Nice post",
    },
    Object {
      "id": 2,
      "name": "Nicer post",
    },
  ],
  "loadMore": true,
}
`;

exports[`Posts reducer returns same state on an unhandled action 1`] = `
Object {
  "isFetching": 0,
  "items": Array [],
  "loadMore": true,
}
`;
